Refresh button cosmetic issue on IE.

--- a/content/src/editor.less
+++ b/content/src/editor.less
@@ -439,6 +439,7 @@ body.modal #middle {
   opacity: 0.6;
   padding: 0;
   margin: 10px;
+  border-radius: 8px;
   background-color: transparent;
 }
 
@@ -447,6 +448,7 @@ body.modal #middle {
   opacity: .9;
   padding: 10px;
   margin: 0;
+  border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.8);
 }
 
